added  register and login pages

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -18,9 +18,11 @@
         <li><a [routerLink]="['/about']" >About</a></li>
         <li><a [routerLink]="['/contact']" >Contact</a></li>
         <li class="dropdown" appDropdown  >
-          <a [routerLink]="['/#']" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a [routerLink]="['/register']">Sign Up</a></li>
+            <li><a [routerLink]="['/login']">Sign In</a></li>
             <li><a [routerLink]="['/account']">User</a></li>
 
           </ul>
