--- a/src/app/component/recipes/recipes.component.html
+++ b/src/app/component/recipes/recipes.component.html
@@ -1,3 +1,6 @@
+<div class="page-header">
+  <h1>{{title}}</h1>
+</div>
 <div class="row">
   <div class="col-md-5">
     <app-recipe-list></app-recipe-list>
