--- a/src/app/component/users/users.component.html
+++ b/src/app/component/users/users.component.html
@@ -1,7 +1,6 @@
-<p>
-  User List
-</p>
-
+<div class="page-header">
+  <h1>{{title}}</h1>
+</div>
 
 <div  *ngFor="let user of users">
   <div class="row">
