--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,72 +2,72 @@
 <div class="container container-fluid body-content">
   <router-outlet></router-outlet>
 </div>
-<footer>
-  <div class="footer" id="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-          <h3> Lorem Ipsum </h3>
-          <ul>
-            <li> <a href="#"> Lorem Ipsum </a> </li>
-            <li> <a href="#"> Lorem Ipsum </a> </li>
+<!--<footer>-->
+  <!--<div class="footer" id="footer" >-->
+    <!--<div class="container">-->
+      <!--<div class="row">-->
+        <!--<div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">-->
+          <!--<h3> Lorem Ipsum </h3>-->
+          <!--<ul>-->
+            <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
+            <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
 
-          </ul>
-        </div>
-        <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-          <h3> Lorem Ipsum </h3>
-          <ul>
-            <li> <a href="#"> Lorem Ipsum </a> </li>
-            <li> <a href="#"> Lorem Ipsum </a> </li>
+          <!--</ul>-->
+        <!--</div>-->
+        <!--<div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">-->
+          <!--<h3> Lorem Ipsum </h3>-->
+          <!--<ul>-->
+            <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
+            <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
 
-          </ul>
-        </div>
-        <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-          <h3> Lorem Ipsum </h3>
-          <ul>
-            <li> <a href="#"> Lorem Ipsum </a> </li>
-            <li> <a href="#"> Lorem Ipsum </a> </li>
+          <!--</ul>-->
+        <!--</div>-->
+        <!--<div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">-->
+          <!--<h3> Lorem Ipsum </h3>-->
+          <!--<ul>-->
+            <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
+            <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
 
-          </ul>
-        </div>
-        <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-          <h3> Lorem Ipsum </h3>
-          <ul>
-            <li> <a href="#"> Lorem Ipsum </a> </li>
-            <li> <a href="#"> Lorem Ipsum </a> </li>
+          <!--</ul>-->
+        <!--</div>-->
+        <!--<div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">-->
+          <!--<h3> Lorem Ipsum </h3>-->
+          <!--<ul>-->
+            <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
+            <!--<li> <a href="#"> Lorem Ipsum </a> </li>-->
 
-          </ul>
-        </div>
-        <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
-          <h3> Socials </h3>
+          <!--</ul>-->
+        <!--</div>-->
+        <!--<div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">-->
+          <!--<h3> Socials </h3>-->
 
-          <ul class="social">
-            <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
-            <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
-            <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
-            <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
-            <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
-          </ul>
-        </div>
-      </div>
-      <!--/.row-->
-    </div>
-    <!--/.container-->
-  </div>
-  <!--/.footer-->
+          <!--<ul class="social">-->
+            <!--<li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>-->
+            <!--<li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>-->
+            <!--<li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>-->
+            <!--<li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>-->
+            <!--<li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>-->
+          <!--</ul>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--&lt;!&ndash;/.row&ndash;&gt;-->
+    <!--</div>-->
+    <!--&lt;!&ndash;/.container&ndash;&gt;-->
+  <!--</div>-->
+  <!--&lt;!&ndash;/.footer&ndash;&gt;-->
 
-  <div class="footer-bottom">
-    <div class="container">
-      <p class="pull-left"> Copyright © Test angular 2 website 2016. All right reserved. </p>
-      <div class="pull-right">
-        <ul class="nav nav-pills payments" style="display: none">
-          <li><i class="fa fa-cc-visa"></i></li>
-          <li><i class="fa fa-cc-mastercard"></i></li>
-          <li><i class="fa fa-cc-amex"></i></li>
-          <li><i class="fa fa-cc-paypal"></i></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!--/.footer-bottom-->
-</footer>
+  <!--<div class="footer-bottom">-->
+    <!--<div class="container">-->
+      <!--<p class="pull-left"> Copyright © Test angular 2 website 2016. All right reserved. </p>-->
+      <!--<div class="pull-right">-->
+        <!--<ul class="nav nav-pills payments" style="display: none">-->
+          <!--<li><i class="fa fa-cc-visa"></i></li>-->
+          <!--<li><i class="fa fa-cc-mastercard"></i></li>-->
+          <!--<li><i class="fa fa-cc-amex"></i></li>-->
+          <!--<li><i class="fa fa-cc-paypal"></i></li>-->
+        <!--</ul>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+  <!--&lt;!&ndash;/.footer-bottom&ndash;&gt;-->
+<!--</footer>-->
