--- a/src/app/component/about/about.component.html
+++ b/src/app/component/about/about.component.html
@@ -1,3 +1,10 @@
 <div class="page-header">
   <h1>{{title}}</h1>
 </div>
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB39BY3KeemTWiMWA3tTY0P8hhLIFY9DGM
+    &q=Space+Needle,Seattle+WA" allowfullscreen>
+</iframe>
