--- a/src/app/component/articles/articles.component.html
+++ b/src/app/component/articles/articles.component.html
@@ -3,9 +3,9 @@
 </div>
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-article-list></app-article-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-article-detail></app-article-detail>
   </div>
 </div>
