--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -5,8 +5,8 @@
       <a class="navbar-brand" [routerLink]="['/']">{{title}}</a>
 
       <ul class="nav navbar-nav">
-        <li><a [routerLink]="['/recipes']" >Recipes</a></li>
-        <li><a [routerLink]="['/users']">Users</a></li>
+        <li><a [routerLink]="['/articles']" >Articles</a></li>
+
       </ul>
     </div>
 
@@ -15,16 +15,17 @@
 
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a [routerLink]="['/about']" >About</a></li>
+        <!--<li><a [routerLink]="['/about']" >About</a></li>-->
         <li><a [routerLink]="['/contact']" >Contact</a></li>
+        <li><a [routerLink]="['/users']">Users</a></li>
+        <li><a [routerLink]="['/register']" *ngIf="!isLogged()">Sign Up</a></li>
+        <li><a [routerLink]="['/login']" *ngIf="!isLogged()">Sign In</a></li>
+        <li><a (click)="logOut()" style="cursor: pointer;" *ngIf="isLogged()">Sign Out</a></li>
         <li class="dropdown" appDropdown  >
           <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            Dropdown <span class="caret"></span></a>
+            <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a [routerLink]="['/register']">Sign Up</a></li>
-            <li><a [routerLink]="['/login']">Sign In</a></li>
-            <li><a [routerLink]="['/account']">User</a></li>
-
+            <li><a [routerLink]="['/account']">Account</a></li>
           </ul>
         </li>
       </ul>
