--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav navbar-right">
         <!--<li><a [routerLink]="['/about']" >About</a></li>-->
         <li><a [routerLink]="['/contact']" >Contact</a></li>
-        <li><a [routerLink]="['/users']">Users</a></li>
+        <li *ngIf="isAdmin()" ><a [routerLink]="['/users']">Users</a></li>
         <li><a [routerLink]="['/register']" *ngIf="!isLogged()">Sign Up</a></li>
         <li><a [routerLink]="['/login']" *ngIf="!isLogged()">Sign In</a></li>
         <li><a (click)="logOut()" style="cursor: pointer;" *ngIf="isLogged()">Sign Out</a></li>
